--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-embed": "^3.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-twitter-embed": "^3.0.3",
+    "react-twitter-embedded-timeline": "^0.5.1",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.1.1"
   },
